--- a/cv.html
+++ b/cv.html
@@ -6,26 +6,312 @@
 
 		<title>reveal.js</title>
 
-		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/black.css">
-
-		<!-- Theme used for syntax highlighting of code -->
-		<link rel="stylesheet" href="lib/css/zenburn.css">
-
-		<!-- Printing and PDF exports -->
-		<script>
-			var link = document.createElement( 'link' );
-			link.rel = 'stylesheet';
-			link.type = 'text/css';
-			link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
-			document.getElementsByTagName( 'head' )[0].appendChild( link );
-		</script>
+		<link rel="stylesheet" href="css/reveal.min.css">
+        <link href="css/site.min.css" rel="stylesheet" />
+        <link href="css/font-awesome.min.css" rel="stylesheet" />
+		<link rel="stylesheet" href="css/white.css">
 	</head>
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section>
+                    <div class="personal-details">
+                        <div class="header">
+                            <h3>Personal Details</h3>
+                        </div>
+                        <div class="bs-callout bs-callout-primary" id="callout-alerts-no-default">
+                            <h4>
+                                Manuel Reina Aguilar (Fullstack developer)
+                            </h4>
+                            <figure>
+                                <img src="https://avatars3.githubusercontent.com/u/15227137?v=3&s=460" alt="Manuel Reina Aguilar" />
+                            </figure>
+                            <ul class="cv_lists">
+                                <li><span class="fa fa-map-marker"></span>Malaga, Spain</li>
+                                <li><span class="fa fa-flag"></span>Spanish</li>
+                                <li><span class="fa fa-envelope"></span>manuel.reina@hotmail.com</li>
+                                <li><span class="fa fa-phone"></span>+34 635919292 </li>
+                                <li><span class="fa fa-internet-explorer"></span><a href="http://manuelreina.github.io/">http://manuelreina.github.io/</a></li>
+                                <li><span class="fa fa-github"></span><a href="https://github.com/manuelreina">https://github.com/manuelreina</a></li>
+                                <li><span class="fa fa-twitter"></span><a href="https://twitter.com/_manuel_reina">https://twitter.com/_manuel_reina</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </section>
+                <section>
+                    <section>
+                        <div>
+                            <div class="header">
+                                <h3>Work Experience</h3>
+                            </div>
+                            <h4>
+                                2015 to present
+                            </h4>
+                            <h6>(CLUB LA COSTA Resorts & Hotels)</h6>
+                            <br />
+                            <div class="bs-callout bs-callout-primary" id="callout-alerts-no-default">
+                                <h4>
+                                    Technical / Team leader
+                                </h4>
+                                In charge of providing software solutions, team support as well as developing and maintaining our software. In 2016 I've been focused in creating an electronic sales presentation controlled with a mobile device (SignalR and websockets) and a Control Panel with realtime data (SignalR and websockets) for managers. Basically, it's a web app for selling our product created with (Angular 1.x and typescript) + WebApi 2 + SignalR.
+                            </div>
+                        </div>
+                    </section>
+                    <section>
+                        <div>
+                            <div class="header">
+                                <h3>Work Experience</h3>
+                            </div>
+                            <h3>
+                                2014
+                            </h3>
+                            <h6>(CLUB LA COSTA Resorts & Hotels)</h6>
+                            <br />
+                            <div class="bs-callout bs-callout-primary" id="callout-alerts-no-default">
+                                <h4>
+                                    Full stack developer
+                                </h4>
+                                I was in charge of creating an architecture based on WebApi 2, (Entity Framework + Repository pattern) and Angular 1.x as well as migrating our asp.net Web Forms systems.
+                            </div>
+                        </div>
+                    </section>
+                    <section>
+                        <div>
+                            <div class="header">
+                                <h3>Work Experience</h3>
+                            </div>
+                            <h3>
+                                2010 to 2014
+                            </h3>
+                            <h6>(CLUB LA COSTA Resorts & Hotels)</h6>
+                            <br />
+                            <div class="bs-callout bs-callout-primary" id="callout-alerts-no-default">
+                                <h4>
+                                    Full stack developer
+                                </h4>
+                                <h6>(CLUB LA COSTA Resorts & Hotels)</h6>
+                                Developing and maintaining public and local webs using MVC, WebApi, WebForms, Silverlight and Orchard CMS. We created a ticketing system using silverlight.
+                                <p>Public webs:</p>
+                                <ul>
+                                    <li><a href="https://www.myclcworld.com/">https://www.myclcworld.com/</a></li>
+                                    <li><a href="https://www.clcbookings.com/">https://www.clcbookings.com/</a></li>
+                                    <li><a href="https://www.clcworldtravel.co.uk/ ">https://www.clcworldtravel.co.uk/ </a></li>
+
+                                </ul>
+                            </div>
+                        </div>
+                    </section>
+                    <section>
+                        <div>
+                            <div class="header">
+                                <h3>Work Experience</h3>
+                            </div>
+                            <h3>
+                                2009
+                            </h3>
+                            <h6>(CLUB LA COSTA Resorts & Hotels)</h6>
+                            <div class="bs-callout bs-callout-primary" id="callout-alerts-no-default">
+                                <h4>
+                                    .NET Senior Programmer.
+                                </h4>
+                                During the period of 7 months I worked in UK developing and maintaining the call centre software of 3 offices located in Southend-on-Sea, Pitsea (Essex) and Manchester. I was in charge of traveling to these offices, configuring their servers and meeting the call centre manager needs.
+                            </div>
+                        </div>
+                    </section>
+                    <section>
+                        <div>
+                            <div class="header">
+                                <h3>Work Experience</h3>
+                            </div>
+                            <h3>
+                                2007 to 2009
+                            </h3>
+                            <h6>(CLUB LA COSTA Resorts & Hotels)</h6>
+                            <div class="bs-callout bs-callout-primary" id="callout-alerts-no-default">
+                                <h4>
+                                    .NET Programmer.
+                                </h4>
+                                Developing and maintaining public and local webs.
+                            </div>
+                        </div>
+                    </section>
+                    <section>
+                        <div>
+                            <div class="header">
+                                <h3>Work Experience</h3>
+                            </div>
+                            <h3>
+                                2006 to 2007
+                            </h3>
+                            <h6>(CLUB LA COSTA Resorts & Hotels)</h6>
+                            <div class="bs-callout bs-callout-primary" id="callout-alerts-no-default">
+                                <h4>
+                                    IT Support.
+                                </h4>
+                                Supporting and maintaining servers, networks and computers.
+                            </div>
+                        </div>
+                    </section>
+                </section>
+                <section>
+                    <section>
+                        <div>
+                            <div class="header">
+                                <h3>Personal skills and competences</h3>
+                            </div>
+                            <div class="bs-callout bs-callout-primary" id="callout-alerts-no-default">
+                                <h4>
+                                    Back-End
+                                </h4>
+                                <ul>
+                                    <li>
+                                        Deep knowledge of .NET (C#) (MVC , WebApi).
+                                    </li>
+                                    <li>
+                                        Proficiency with repository pattern, dependency injection and Entity Framework.
+                                    </li>
+                                    <li>
+                                        Proficiency with SQL
+                                    </li>
+                                    <li>
+                                        Proficiency with Orchard CMS, SignalR and asp.net 5.
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </section>
+                    <section>
+                        <div>
+                            <div class="header">
+                                <h3>Personal skills and competences</h3>
+                            </div>
+                            <div class="bs-callout bs-callout-primary" id="callout-alerts-no-default">
+                                <h4>
+                                    Front-End
+                                </h4>
+                                <ul>
+                                    <li>
+                                        Proficiency with Angular 1.x, Angular 2 and Typescript.
+                                    </li>
+                                    <li>
+                                        Proficiency with module bundlers (webpack) and Task runners (grunt).
+                                    </li>
+                                    <li>
+                                        Proficiency with Html5 and CSS.
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </section>
+                </section>
+                <section>
+                    <section>
+                        <div class="education-training">
+                            <div class="header">
+                                <h3>Education and training</h3>
+                            </div>
+                            <h3>
+                                From October 1999 to October 2001
+                            </h3>
+                            <div class="bs-callout bs-callout-primary" id="callout-alerts-no-default">
+                                <h4>
+                                    Advanced Technician in Applications Development
+                                </h4>
+                                .NET C#, SQL, Borland C++, VB
+                                <img src="img/cenec-microsoft.png" class="organization" />
+                            </div>
+
+                        </div>
+                    </section>
+                    <section>
+                        <div class="education-training">
+                            <div class="header">
+                                <h3>Education and training</h3>
+                            </div>
+                            <h3>
+                                English Language
+                            </h3>
+                            <div class="bs-callout bs-callout-primary" id="callout-alerts-no-default">
+                                <h4>Understanding</h4>
+                                <table>
+                                    <thead>
+                                        <tr>
+                                            <th>Listening</th>
+                                            <th>Reading</th>
+                                        </tr>
+                                    </thead>
+                                    <tr>
+                                        <td>
+                                            <table>
+                                                <tr>
+                                                    <td>B2</td>
+                                                    <td>Independent</td>
+                                                </tr>
+                                            </table>
+                                        </td>
+                                        <td>
+                                            <table>
+                                                <tr>
+                                                    <td>C2</td>
+                                                    <td>Proficient</td>
+                                                </tr>
+                                            </table>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </div>
+                            <div class="bs-callout bs-callout-primary" id="callout-alerts-no-default">
+                                <h4>Speaking</h4>
+                                <table>
+                                    <thead>
+                                        <tr>
+                                            <th>Spoken interaction</th>
+                                            <th>Spoken production </th>
+                                        </tr>
+                                    </thead>
+                                    <tr>
+                                        <td>
+                                            <table>
+                                                <tr>
+                                                    <td>B2</td>
+                                                    <td>Independent</td>
+                                                </tr>
+                                            </table>
+                                        </td>
+                                        <td>
+                                            <table>
+                                                <tr>
+                                                    <td>B2</td>
+                                                    <td>Independent</td>
+                                                </tr>
+                                            </table>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </div>
+                            <div class="bs-callout bs-callout-primary" id="callout-alerts-no-default">
+                                <h4>Writing</h4>
+                                <table>
+                                    <thead>
+                                        <tr>
+                                            <th>Spoken interaction</th>
+                                        </tr>
+                                    </thead>
+                                    <tr>
+                                        <td>
+                                            <table>
+                                                <tr>
+                                                    <td>C1</td>
+                                                    <td>Proficient</td>
+                                                </tr>
+                                            </table>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </div>
+                        </div>
+                    </section>
+                </section>
 			</div>
 		</div>
 
@@ -36,16 +322,23 @@
 			// More info https://github.com/hakimel/reveal.js#configuration
 			Reveal.initialize({
 				history: true,
+			    // Factor of the display size that should remain empty around the content
+				width: 1280,
+				height: 720,
+				margin: 0,
+                center: true,
+			    // Bounds for smallest/largest possible scale to apply to content
+				minScale: 0.1,
+				maxScale: 0.6,
+				showNotes: false,
+			    // Enable slide navigation via mouse wheel
+				mouseWheel: true,
 
 				// More info https://github.com/hakimel/reveal.js#dependencies
 				dependencies: [
-					{ src: 'plugin/markdown/marked.js' },
-					{ src: 'plugin/markdown/markdown.js' },
-					{ src: 'plugin/notes/notes.js', async: true },
 					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } }
 				]
 			});
 		</script>
 	</body>
 </html>
-
