skills + experience + education

--- a/cv/pdf-version/index.html
+++ b/cv/pdf-version/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body id="top">
-  <header>
+  <!-- <header>
     <div class="profile-page sidebar-collapse">
       <nav class="navbar navbar-expand-lg fixed-top navbar-transparent bg-primary" color-on-scroll="400">
         <div class="container">
@@ -43,7 +43,7 @@
         </div>
       </nav>
     </div>
-  </header>
+  </header> -->
   <div class="page-content">
     <div>
       <div class="profile-page">
@@ -55,21 +55,11 @@
               <div class="content-center">
                 <div class="cc-profile-image"><a href="#"><img src="images/Manu.jpg" alt="Image" /></a></div>
                 <div class="h2 title">Manuel Reina</div>
-                <p class="category text-white">Software Engineering Manager / Technical lead</p><a class="btn btn-primary" href="/manuel-reina.pdf"
-                  target="_blank" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
+                <p class="category text-white">Software Engineering Manager / Technical lead</p>
               </div>
             </div>
             <div class="section">
-              <div class="container">
-                <div class="button-container">
-                  <a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.linkedin.com/in/manuel-reina/" rel="tooltip" target="_blank"
-                    title="Follow me on Linked in"><i class="fa fa-linkedin"></i></a>
-                  <a class="btn btn-default btn-round btn-lg btn-icon" href="https://twitter.com/_manuel_reina" rel="tooltip"  target="_blank"
-                    title="Follow me on Twitter"><i class="fa fa-twitter"></i></a>
-                  <a class="btn btn-default btn-round btn-lg btn-icon" href="https://github.com/manuelreina" rel="tooltip"  target="_blank"
-                    title="Follow me on Github"><i class="fa fa-github"></i></a>
-                </div>
-              </div>
+              
             </div>
           </div>
         </div>
@@ -81,7 +71,8 @@
               <div class="col-lg-6 col-md-12">
                 <div class="card-body">
                   <div class="h4 mt-0 title">Profile</div>
-                  <p>Interested in understanding how to design software solutions to maximize the value that software development teams can deliver.</p>
+                  <p>Interested in understanding how to design software solutions to maximize the value that software
+                    development teams can deliver.</p>
                   <p>Taking high level decisions with attention to system integration and feasibility.</p>
                   <p>Focusing on code quality and Domain-Driven Design with .NET and Angular.</p>
                   <p>More than 15 years of enterpise-level experience.</p>
@@ -99,14 +90,6 @@
                     </div>
                   </div>
                   <hr>
-                  <div class="row">
-                    <div class="col-sm-3">
-                      <h6 class="mb-0">Mobile</h6>
-                    </div>
-                    <div class="col-sm-9 text-secondary">
-                      (+34) 635 919 292
-                    </div>
-                  </div>
                   <hr>
                   <div class="row">
                     <div class="col-sm-3">
@@ -121,6 +104,7 @@
             </div>
           </div>
         </div>
+      </br>
         <div class="section" id="skill">
           <div class="container">
             <div class="h4 text-center mb-4 title">SKILLS</div>
@@ -213,20 +197,20 @@
             </div>
           </div>
         </div>
-
+      </br>
+      </br>
         <div class="section" id="experience">
           <div class="container cc-experience">
-            <div class="h4 text-center mb-4 title">Work Experience</div>
+            <div class="h4 text-center mb-4 title">WORK EXPERIENCE</div>
             <div class="card">
               <div class="row">
-                <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-                  <div class="card-body cc-experience-header">
-                    <p>March 2017 - Present</p>
-                    <div class="h5">CLC World</div>
-                  </div>
-                </div>
-                <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+
+                <div data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                   <div class="card-body">
+                    <div class="cc-experience-header">
+                      <p>March 2017 - Present</p>
+                      <div class="h6">CLC World</div>
+                    </div>
                     <div class="h5">Software Engineering Manager / Technical lead</div>
                     <ul>
                       <li>Built up and led a team using mainly .NET technologies and Angular as our front-end framework
@@ -259,14 +243,12 @@
             </div>
             <div class="card">
               <div class="row">
-                <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-                  <div class="card-body cc-experience-header">
-                    <p>January 2010 - March 2017</p>
-                    <div class="h5">CLC WORLD</div>
-                  </div>
-                </div>
-                <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+                <div data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                   <div class="card-body">
+                    <div class="cc-experience-header">
+                      <p>January 2010 - March 2017</p>
+                      <div class="h6">CLC WORLD</div>
+                    </div>
                     <div class="h5">Technical lead / Senior Software Developer</div>
                     <ul>
                       <li>Led a team to deliver a modern Digital Sales Aid solution with a Real Time Dashboard for the
@@ -275,7 +257,8 @@
                         Entity Framework 6) and Angular as the front-end solution.</li>
                       <li>Collaborated on the development of our Members’ web site using the Orchard, an Open source
                         CMS, built on top of ASP.NET MVC framework. Apart from all the CMS development the web site also
-                        had to communicate with our on-premise PMS database, using our API solution built with ASP.NET Web API.</li>
+                        had to communicate with our on-premise PMS database, using our API solution built with ASP.NET
+                        Web API.</li>
                     </ul>
                   </div>
                 </div>
@@ -283,15 +266,13 @@
             </div>
             <div class="card">
               <div class="row">
-                <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-                  <div class="card-body cc-experience-header">
-                    <p>April 2009 - January 2010</p>
-                    <div class="h5">CLC WORLD</div>
-                    <div class="h7">(London)</div>
-                  </div>
-                </div>
-                <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+                <div data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                   <div class="card-body">
+                    <div class="cc-experience-header">
+                      <p>April 2009 - January 2010</p>
+                      <div class="h6">CLC WORLD</div>
+                      <div class="h7">(London)</div>
+                    </div>
                     <div class="h5">Software Developer</div>
                     <ul>
                       <li>I moved to London and collaborated with other London based IT members on the rollout our
@@ -306,91 +287,89 @@
               </div>
             </div>
             <div class="card">
-              <div class="row">
-                <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-                  <div class="card-body cc-experience-header">
-                    <p>December 2006 - April 2009</p>
-                    <div class="h5">CLC WORLD</div>
+              <div data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+                <div class="card-body">
+                  <div class="cc-experience-header">
+                    <p>April 2006 - April 2009</p>
+                    <div class="h6">CLC WORLD</div>
                   </div>
-                </div>
-                <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-                  <div class="card-body">
-                    <div class="h5">Software Developer</div>
-                    <ul>
-                      <li>Developed together with our software developer team a Marketing CRM based on the business’ needs. </li>
-                    </ul>
-                  </div>
+                  <div class="h5">Software Developer</div>
+                  <ul>
+                    <li>Developed together with our software developer team a Marketing CRM based on the business’
+                      needs. </li>
+                  </ul>
                 </div>
               </div>
             </div>
-
             <div class="card">
-              <div class="row">
-                <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-                  <div class="card-body cc-experience-header">
+              <div data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+                <div class="card-body">
+                  <div class="cc-experience-header">
                     <p>March 2005 - April 2006</p>
-                    <div class="h5">CLC WORLD</div>
+                    <div class="h6">CLC WORLD</div>
                   </div>
-                </div>
-                <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-                  <div class="card-body">
-                    <div class="h5">Tech Support</div>
-                    <ul>
-                      <li>During this period apart from giving Technical support across the company, I tried to learn as much as I could, from the System Administrator’ responsibilities. </li>
-                    </ul>
-                  </div>
+                  <div class="h5">Tech Support</div>
+                  <ul>
+                    <li>During this period apart from giving Technical support across the company, I tried to learn,
+                      as much as I could, from the System Administrator’ responsabilities. </li>
+                  </ul>
                 </div>
               </div>
             </div>
           </div>
-        </div>
-        <div class="section" id="education">
-          <div class="container cc-education">
-            <div class="h4 text-center mb-4 title">Education</div>
-            <div class="card">
-              <div class="row">
-                <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-                  <div class="card-body cc-education-header">
-                    <p>1999 - 2001</p>
-                    <div class="h5">Higher National Diploma</div>
-                  </div>
-                </div>
-                <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-                  <div class="card-body">
-                    <div class="h5">Software Engineering</div>
-                    <p class="category">CENEC (Malaga)</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="row">
-                <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-                  <div class="card-body cc-education-header">
-                    <p>1997 - 1999</p>
-                    <div class="h5">High School</div>
-                  </div>
-                </div>
-                <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-                  <div class="card-body">
-                    <div class="h5">Science and Mathematics</div>
-                    <p class="category">I.E.S (Arroyo de la Miel)</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
 
-
+          
+        </div>
       </div>
     </div>
+  <div style="height: 211px;"></div>
+    <div class="section" id="education">
+      <div class="container cc-education">
+        <div class="h4 text-center mb-4 title">EDUCATION</div>
+        <div class="card">
+          <div class="row">
+            <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+              <div class="card-body cc-education-header">
+                <p>1999 - 2001</p>
+                <div class="h5">Higher National Diploma</div>
+              </div>
+            </div>
+            <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+              <div class="card-body">
+                <div class="h5">Software Engineering</div>
+                <p class="category">CENEC (Malaga)</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="row">
+            <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+              <div class="card-body cc-education-header">
+                <p>1997 - 1999</p>
+                <div class="h5">High School</div>
+              </div>
+            </div>
+            <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+              <div class="card-body">
+                <div class="h5">Science and Mathematics</div>
+                <p class="category">I.E.S (Arroyo de la Miel)</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+  </div>
+  </div>
   </div>
   <footer class="footer">
     <div class="container text-center">
-      <a class="cc-linkedin btn btn-link" href="https://www.linkedin.com/in/manuel-reina/"  target="_blank"><i class="fa fa-linkedin fa-2x " aria-hidden="true"></i></a>
-      <a class="cc-twitter btn btn-link " href="https://twitter.com/_manuel_reina"  target="_blank"><i class="fa fa-twitter fa-2x " aria-hidden="true"></i></a>
-      <a class="cc-github btn btn-link" href="https://github.com/manuelreina"  target="_blank"><i class="fa fa-github fa-2x " aria-hidden="true"></i></a></div>
+      <a class="cc-linkedin btn btn-link" href="#"><i class="fa fa-linkedin fa-2x " aria-hidden="true"></i></a>
+      <a class="cc-twitter btn btn-link " href="#"><i class="fa fa-twitter fa-2x " aria-hidden="true"></i></a>
+      <a class="cc-github btn btn-link" href="#"><i class="fa fa-github fa-2x " aria-hidden="true"></i></a></div>
     <div class="h4 title text-center">Manuel Reina</div>
   </footer>
   <script src="js/core/jquery.3.2.1.min.js?ver=1.1.0"></script>
