--- a/CV/index.html
+++ b/CV/index.html
@@ -55,7 +55,7 @@
               <div class="content-center">
                 <div class="cc-profile-image"><a href="#"><img src="images/Manu.jpg" alt="Image" /></a></div>
                 <div class="h2 title">Manuel Reina</div>
-                <p class="category text-white">Software Engineering Manager / Technical lead</p><a class="btn btn-primary" href="CV/manuel-reina.pdf"
+                <p class="category text-white">Software Engineering Manager / Technical lead</p><a class="btn btn-primary" href="/manuel-reina.pdf"
                   target="_blank" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
               </div>
             </div>
